--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml"  />
+    <link rel="shortcut icon" href="/logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>careerlink-project-client</title>
+    <title>CareerLink</title>
   </head>
   <body>
     <div id="root"></div>
